@@ -1,5 +1,7 @@
+import com.github.jk1.license.render.JsonReportRenderer
+
 /*
- * Copyright 2022 Kaleyra @ https://www.kaleyra.com
+ * Copyright 2023 Kaleyra @ https://www.kaleyra.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,36 +15,77 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'maven-publish'
-    id 'org.jetbrains.dokka' version("1.5.31")
+    alias(catalog.plugins.dokka)
+    alias(catalog.plugins.licenseReport)
 }
 
 apply from: '../versions.gradle'
+apply from: '../licenses.gradle'
 apply from: '../android.gradle'
 apply from: '../publish.gradle'
 apply from: '../downloadIcons.gradle'
 apply from: '../moveIcons.gradle'
 
 dependencies {
-    api fileTree(include: ['*.jar'], dir: 'libs')
-    coreLibraryDesugaring androidX.desugar
 
-    testImplementation test.jUnit
-    testImplementation kaleyra.utils
-    androidTestImplementation test.espresso
+    /** PLatform **/
+    api catalog.kotlinStdLib
+    api catalog.androidxCoreKtx
+    api catalog.androidxLifecycleCommonJava8
+    api catalog.appcompat
+    api catalog.material
+    coreLibraryDesugaring catalog.desugar
 
-    api jetbrains.stdlib
-    api ktxExtensions.core
-    api androidX.appCompat
-    api google.material
-    api picasso.picasso
+    /** UI **/
+    api catalog.squareupPicasso
+    implementation catalog.androidxConstraintLayout
+
+    /** Testing **/
+    testImplementation catalog.junit
+    testImplementation catalog.mockk
+    testImplementation catalog.roboelectric
+    testImplementation catalog.coroutines
+    testImplementation catalog.coroutinesTest
+    testImplementation kaleyraCatalog.kaleyraCollaborationSuite
+    androidTestImplementation catalog.androidxTestEspressoCore
 
     /** Kaleyra **/
-    compileOnly kaleyra.collaboration
-    compileOnly kaleyra.utils
+    compileOnly kaleyraCatalog.kaleyraCollaborationSuite
+    compileOnly kaleyraCatalog.kaleyraCollaborationSuiteExtensionAudio
+}
+
+licenseReport {
+    // Set output directory for the report data.
+    // Defaults to ${project.buildDir}/reports/dependency-license.
+    outputDir = "$projectDir/build/licenses"
+
+    // Select projects to examine for dependencies.
+    // Defaults to current project and all its subprojects
+    projects = [project] + project.subprojects
+
+    // Adjust the configurations to fetch dependencies. Default is 'runtimeClasspath'
+    // For Android projects use 'releaseRuntimeClasspath' or 'yourFlavorNameReleaseRuntimeClasspath'
+    // Use 'ALL' to dynamically resolve all configurations:
+    // configurations = ALL
+    configurations = ['releaseRuntimeClasspath']
+
+    // Set custom report renderer, implementing ReportRenderer.
+    // Yes, you can write your own to support any format necessary.
+    renderers = [new JsonReportRenderer('licenses.json', false)]
+}
+
+// workaround for mockk spyk(proxy)
+// https://mockk.io/doc/md/jdk16-access-exceptions.html
+tasks.withType(Test) {
+    jvmArgs(
+            "--add-opens", "java.base/java.time=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+    )
 }
